--- a/README
+++ b/README
@@ -21,7 +21,5 @@ include this code with Wireshark, the files must be copied to the
 to Makefile.common in the same directory. The stadard Wireshark source build
 procedure must be followed afterwards to build the network analyzer.
 
-The dissector code is developed against the 1.5.x development branch of
-Wireshark. Due to minor API changes it will not compile with the stable 1.2.x
-and 1.4.x branches. For now, backporting to those branches only requires
-changing dissector_add_uint() calls to dissector_add().
+The dissector code is developed against the 1.8.x development branch of
+Wireshark. 
