--- a/TODO
+++ b/TODO
@@ -5,6 +5,7 @@ packet-lisp.c
 * Actually show the encapsulation header when present
 * Dissect locator sets in detail, highlighting individual fields in the hex
   data
+* LCAF done - use it as Source EID in Map Request and in Map INFO 
 * Dissect maping records in detail, highlighting individual fields in the hex
   data
 * Improve LCAF parsing robustness, by ignoring length when dissecting known
