--- a/README
+++ b/README
@@ -1,3 +1,6 @@
+**THIS REPOSITORY IS NO LONGER MAINTAINED, THE LISP DISSECTOR IS DEVELOPED
+WITHIN THE MAILINE WIRESHARK CODE**
+
                      LISP Packet Dissector for Wireshark
 		     ===================================
 
